--- a/7-2/7-2-11.html
+++ b/7-2/7-2-11.html
@@ -3,18 +3,18 @@
   <head>
     <title></title>
     <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        const imgs = document.querySelectorAll('img')
-       
+      document.addEventListener("DOMContentLoaded", () => {
+        const imgs = document.querySelectorAll("img");
+
         imgs.forEach((img) => {
-          img.addEventListener('contextmenu', (event) => {
-            event.preventDefault()
-          })
-        })
-      })
+          img.addEventListener("contextmenu", (event) => {
+            event.preventDefault();
+          });
+        });
+      });
     </script>
   </head>
   <body>
-    <img src="http://placekitten.com/300/300" alt="">
+    <img src="http://placekitten.com/300/300" alt="" />
   </body>
 </html>
