--- a/7-2/7-2-5.html
+++ b/7-2/7-2-5.html
@@ -3,30 +3,29 @@
   <head>
     <title></title>
     <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        const input = document.querySelector('input')
-        const p = document.querySelector('p')
+      document.addEventListener("DOMContentLoaded", () => {
+        const input = document.querySelector("input");
+        const p = document.querySelector("p");
         const isEmail = (value) => {
           // 골뱅이를 갖고 있고 && 골뱅이 뒤에 점이 있다면
-          return (value.indexOf('@') > 1)
-            && (value.split('@')[1].indexOf('.') > 1)
-        }
+          return value.indexOf("@") > 1 && value.split("@")[1].indexOf(".") > 1;
+        }; // split @ 했을시 골뱅이 전과 후 두개의 요소를 가진 배열이됨.그중 1번째 인덱스에 .있다면
 
-        input.addEventListener('keyup', (event) => {
-          const value = event.currentTarget.value
+        input.addEventListener("keyup", (event) => {
+          const value = event.currentTarget.value;
           if (isEmail(value)) {
-            p.style.color = 'green'
-            p.textContent = `이메일 형식입니다: ${value}`
+            p.style.color = "green";
+            p.textContent = `이메일 형식입니다: ${value}`;
           } else {
-            p.style.color = 'red'
-            p.textContent = `이메일 형식이 아닙니다: ${value}`
+            p.style.color = "red";
+            p.textContent = `이메일 형식이 아닙니다: ${value}`;
           }
-        })
-      })
+        });
+      });
     </script>
   </head>
   <body>
-    <input type="text">
+    <input type="text" />
     <p></p>
   </body>
 </html>
