--- a/7-2/7-2-8.html
+++ b/7-2/7-2-8.html
@@ -3,34 +3,35 @@
   <head>
     <title></title>
     <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        let 현재값
-        let 변환상수 = 10
+      document.addEventListener("DOMContentLoaded", () => {
+        let 현재값;
+        let 변환상수 = 10;
 
-        const select = document.querySelector('select')
-        const input = document.querySelector('input')
-        const span = document.querySelector('span')
+        const select = document.querySelector("select");
+        const input = document.querySelector("input");
+        const span = document.querySelector("span");
 
         const calculate = () => {
-          span.textContent = (현재값 * 변환상수).toFixed(2)
-        }
+          span.textContent = (현재값 * 변환상수).toFixed(2);
+        };
+        // 소수점 2자리 까지만 나타내도록 구현
 
-        select.addEventListener('change', (event) => {
-          const options = event.currentTarget.options
-          const index = event.currentTarget.options.selectedIndex
-          변환상수 = Number(options[index].value)
-          calculate()
-        })
+        select.addEventListener("change", (event) => {
+          const options = event.currentTarget.options;
+          const index = event.currentTarget.options.selectedIndex;
+          변환상수 = Number(options[index].value);
+          calculate();
+        });
 
-        input.addEventListener('keyup', (event) => {
-          현재값 = Number(event.currentTarget.value)
-          calculate()
-        })
-      })
+        input.addEventListener("keyup", (event) => {
+          현재값 = Number(event.currentTarget.value);
+          calculate();
+        });
+      });
     </script>
   </head>
   <body>
-    <input type="text"> cm =
+    <input type="text" /> cm =
     <span></span>
     <select>
       <option value="10">mm</option>
