--- a/7-2/7-2-9.html
+++ b/7-2/7-2-9.html
@@ -3,29 +3,30 @@
   <head>
     <title></title>
     <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        let [timer, timerId] = [0, 0]
-        const h1 = document.querySelector('h1')
-        const checkbox = document.querySelector('input')
+      document.addEventListener("DOMContentLoaded", () => {
+        let [timer, timerId] = [0, 0];
+        const h1 = document.querySelector("h1");
+        const checkbox = document.querySelector("input");
 
-        checkbox.addEventListener('change', (event) => {
+        checkbox.addEventListener("change", (event) => {
           if (event.currentTarget.checked) {
             // 체크 상태
             timerId = setInterval(() => {
-              timer += 1
-              h1.textContent = `${timer}초`
-            }, 1000)
+              timer += 1;
+              h1.textContent = `${timer}초`;
+            }, 1000);
           } else {
             // 체크 해제 상태
-            clearInterval(timerId)
+            clearInterval(timerId);
           }
-        })
-      })
+        });
+      });
     </script>
   </head>
   <body>
-    <input type="checkbox">
+    <input type="checkbox" />
     <span>타이머 활성화</span>
-    <h1></h1>   
+    <h1></h1>
+    <!-- 초확인부분 -->
   </body>
 </html>
