--- a/7-2/7-2-12.html
+++ b/7-2/7-2-12.html
@@ -3,27 +3,27 @@
   <head>
     <title></title>
     <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        let status = false
-        
-        const checkbox = document.querySelector('input')
-        checkbox.addEventListener('change', (event) => {
-          status = event.currentTarget.checked
-        })
+      document.addEventListener("DOMContentLoaded", () => {
+        let status = false;
 
-        const link = document.querySelector('a')
-        link.addEventListener('click', (event) => {
+        const checkbox = document.querySelector("input");
+        checkbox.addEventListener("change", (event) => {
+          status = event.currentTarget.checked;
+        });
+
+        const link = document.querySelector("a");
+        link.addEventListener("click", (event) => {
           if (!status) {
-            event.preventDefault()
+            event.preventDefault();
           }
-        })
-      })
+        });
+      });
     </script>
   </head>
   <body>
-    <input type="checkbox">
+    <input type="checkbox" />
     <span>링크 활성화</span>
-    <br>
+    <br />
     <a href="http://hanbit.co.kr">한빛미디어</a>
   </body>
 </html>
