--- a/7-2/7-2-15.html
+++ b/7-2/7-2-15.html
@@ -3,34 +3,34 @@
   <head>
     <title></title>
     <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        const p = document.querySelector('p')
-        const input = document.querySelector('input')
-        const button = document.querySelector('button')
+      document.addEventListener("DOMContentLoaded", () => {
+        const p = document.querySelector("p");
+        const input = document.querySelector("input");
+        const button = document.querySelector("button");
 
-        const savedValue = localStorage.getItem('input')
+        const savedValue = localStorage.getItem("input");
         // localStorage.input도 가능합니다.
         if (savedValue) {
-          input.value = savedValue
-          p.textContent = `이전 실행 때의 마지막 값: ${savedValue}`
-        }
+          input.value = savedValue;
+          p.textContent = `이전 실행 때의 마지막 값: ${savedValue}`;
+        } // savedValue 가 null이 아닐때 실행되게 구현
 
-        input.addEventListener('keyup', (event) => {
-          const value = event.currentTarget.value
-          localStorage.setItem('input', value)
+        input.addEventListener("keyup", (event) => {
+          const value = event.currentTarget.value;
+          localStorage.setItem("input", value);
           // localStorage.input = value도 가능합니다.
-        })
+        });
 
-        button.addEventListener('click', (event) => {
-          localStorage.clear()
-          input.value = ''
-        })
-      })
+        button.addEventListener("click", (event) => {
+          localStorage.clear();
+          input.value = "";
+        });
+      });
     </script>
   </head>
   <body>
     <p></p>
     <button>지우기</button>
-    <input type="text">
+    <input type="text" />
   </body>
 </html>
